# neutrix

./: Cargo.toml  LICENSE  README.md  x86_64-blog_os.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: lib.rs  main.rs
src/arch/: exceptions.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  ports.rs  processor.rs  task.rs  tsc_timer.rs
src/bootvga/: mod.rs  vga_buffer.rs  vga_helpers.rs
src/devices/: mod.rs  pci.rs
src/devices/PIT/: mod.rs  pit.rs
src/devices/acpi/: acpi.rs  mod.rs
src/devices/ps2keyboard/: kbd.rs  mod.rs
src/driver_framework/: device.rs  driver.rs  manager.rs  mod.rs
src/driver_framework/drivers/: console.rs  mod.rs  ps2kbd.rs  ps2mouse.rs  vbe_vga.rs
src/hal/: apic.rs  hal.rs  ioapic.rs  mod.rs
src/memory/: allocator.rs  frame.rs  kmalloc.rs  mod.rs  paging.rs  virtual_alloc.rs
src/rlib/: mem.rs  mod.rs
